# bombolla

./: .gitignore  .gitmodules  Firulais  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  jihn  meson.build
.github/workflows/: indent.yml  ubuntu.yml  ubuntu20.yml  ubuntu22.yml  ubuntu24.yml
bombolla/: Makefile.am  lba-log.h  lba-plugin-system.h  meson.build
bombolla/base/: Makefile.am  i2d.c  i2d.h  i3d.c  i3d.h  lba-2d.c  lba-3d.c  lba-async.c  lba-base-cogl3d.c  lba-base-cogl3d.h  lba-base-opengl-interface.c  lba-base-opengl-interface.h  lba-base2d.c  lba-base2d.h  lba-base3d.c  lba-base3d.h  lba-basedrawable.c  lba-basedrawable.h  lba-basegl2d.c  lba-basegl2d.h  lba-basegl3d.c  lba-basegl3d.h  lba-basewindow.c  lba-basewindow.h  lba-byte-stream.c  lba-byte-stream.h  lba-module-scanner.c  lba-module-scanner.h  lba-picture.c  lba-picture.h  meson.build
bombolla/base/mutogenes/: lba-mutogene-2d.c  lba-mutogene-3d.c  meson.build
bombolla/core/: Makefile.am  bombolla-command-on.c  bombolla-command-set.c  bombolla-commands.c  bombolla-commands.h  bombolla-core.c  lba-boxed.c  lba-boxed.h  lba-commands-fund.c  lba-core.c  lba-expr-node.c  lba-expr-parser.c  lba-expr-parser.h  meson.build
bombolla/core/commands/: lba-command-on.c  lba-command-set.c  lba-commands.c  lba-commands.h
bombolla/core/tests/: bombolla-core-test.c  meson.build
bombolla/lba/: FooBarParser.c  GLcube.c  GLlight.c  GLtexture.c  GlutWindow.c  Makefile.am  httpserver.c  lbaCoglCube.c  lbaCoglLabel.c  lbaCoglTexture.c  lbaCoglWindow.c
bombolla/lba/js/: LbaGjs.c  Makefile.am
bombolla/lba/python/: LbaPythonScanner.c  Makefile.am
bombolla/lba/remote-object/: LbaRemoteObject.c  Makefile.am  lba-remote-object-client.c  lba-remote-object-private.h  lba-remote-object-protocol.c  lba-remote-object-protocol.h  lba-remote-object-server.c  lba-remote-object.c
bombolla/plugins/: meson.build
bombolla/plugins/cairo/: lba-cairo.c  meson.build
bombolla/plugins/cogl/: lba-cogl-cube.c  lba-cogl-label.c  lba-cogl-mutants.c  lba-cogl-texture.c  lba-cogl-window.c  lba-cogl.c  lba-file-stream.c  lba-picture.c  meson.build
bombolla/plugins/cogl/base/: icogl.c  icogl.h  lba-base-cogl3d.c  lba-base-cogl3d.h  lba-basedrawable.c  lba-basegl2d.h  lba-basewindow.c  lba-basewindow.h  lba-cogl.c  meson.build
bombolla/plugins/cogl/base/old-src/: lba-base3d.c  lba-base3d.h  lba-basegl3d.h
bombolla/plugins/cogl/mutogenes/: lba-cogl-label.c  lba-mutogene-3d.c  lba-mutogene-cogl-cube.c  lba-mutogene-cogl.c  meson.build
bombolla/plugins/core/: lba-command-create.c  lba-command-dump.c  lba-command-on.c  meson.build
bombolla/plugins/gstreamer/: lba-gst.c  meson.build
bombolla/plugins/js/: lba-async-string-input.c  lba-gjs.c  meson.build
bombolla/plugins/js/tests/: lba-async-string-input-test.c  meson.build
bombolla/plugins/nodep/: lba-clock.c  lba-file-stream.c  lba-picture.c  meson.build
bombolla/plugins/python/: lba-python.c  meson.build
bombolla/shell/: Makefile.am  bombolla-core.c  bombolla-shell.c
bombolla/shell/commands/: bombolla-command-on.c  bombolla-command-set.c  bombolla-commands.c  bombolla-commands.h
bombolla/tools/shell/: bombolla-shell.c  meson.build
doc/: LOCKFREE.md
examples/: cairo  cogl  plugin-in-js  plugin-in-python  plugin-in-vala
examples/frankenstein-news/: frank.lba  lba-feedparser.py  lba-frank-menu.js
examples/js/: lba-plugin-in-js.js  plugin-in-js-gtk3.lba  plugin-in-js-gtk4.lba  plugin-in-js.js  pure-gobject.lba
examples/js/gtk3/: lba-gtk3-window-in-js.js
examples/js/gtk4/: lba-gtk4-app-in-js.js
examples/js/pure-gobject/: lba-pure-gobject-in-js.js
examples/python/: plugin-in-python.py  use-from-python.py
examples/vala/: Makefile.am  meson.build  plugin-in-vala.vala  register-plugin.c
examples/vala/test/: meson.build  test-plugin-in-vala.c
friendly-libs/: meson.build
friendly-libs/bmixin/: bmixin-docs.xml  bmixin.c  bmixin.h  meson.build
friendly-libs/bmixin/doc/: bmixin-docs.xml  meson.build  usermanual.xml
friendly-libs/bmixin/tests/: meson.build
friendly-libs/bmixin/tests/wolf/: animal.c  animal.h  bmixin-test-wolf.c  dog.c  forest_animal.c  forest_matter.c  hairy.c  has_tail.c  meson.build  wolf.c  wolf2.c
friendly-libs/gmo/: gmo.c  gmo.h  meson.build
friendly-libs/remote-object/: meson.build  robj-brain.c  robj-brain.h  robj-map.c  robj-map.h  robj-portal.c  robj-protocol.c  robj-protocol.h
friendly-libs/remote-object/tests/: meson.build  robj-test-protocol.c
patches/: 0001-fix-build-on-Ubuntu-focal.patch
tests/: Makefile.am  bombolla-core-test.c  test-plugin-in-vala.c
