lba_3d = shared_library('lba-mutogene-3d',
               'lba-mutogene-3d.c',
               dependencies: [bombolla_dep],
               link_with: [lba_base]
              )

lba_2d = shared_library('lba-mutogene-2d',
               'lba-mutogene-2d.c',
               dependencies: [bombolla_dep],
               link_with: [lba_base]
              )
