shared_library('lba-command-create',
               'lba-command-create.c',
               dependencies: [bombolla_core_dep],
              )

shared_library('lba-command-dump',
               'lba-command-dump.c',
               dependencies: [bombolla_core_dep],
              )

shared_library('lba-command-on',
               'lba-command-on.c',
               dependencies: [bombolla_core_dep],
              )
