shared_library('lba-picture',
               'lba-picture.c',
               dependencies: [bombolla_dep],
              )

shared_library('lba-file-stream',
               'lba-file-stream.c',
               dependencies: [bombolla_dep],
              )

shared_library('lba-clock',
               'lba-clock.c',
               dependencies: [bombolla_dep],
              )
